--- a/layouts/partials/article-author.html
+++ b/layouts/partials/article-author.html
@@ -25,6 +25,10 @@
       <a class="item" href="https://twitter.com/{{- . | safeHTML -}}" target="_blank" rel="noopener noreferrer"><span class="iconfont icon-twitter"></span>&nbsp;@{{- . -}}</a>
     {{- end -}}
     
+    {{- with .bluesky -}}
+      <a class="item" href="https://bsky.app/profile/{{- . | safeHTML -}}" target="_blank" rel="noopener noreferrer"><span class="iconfont"><img style="width: 1em; margin-bottom: -2px;" src="/img/bluesky.svg" alt="Bluesky"/></span>&nbsp;@{{- . -}}</a>
+    {{- end -}}
+
     {{- with .email -}}
       <a class="item" href="mailto:{{- . | safeHTML -}}" target="_blank" rel="noopener noreferrer"><span class="iconfont icon-email"></span>&nbsp;{{- . -}}</a>
     {{- end -}}
